# CI_CD

./: .cproject  .cproject.bak  .mxproject  .project  CI_CD.ioc  CMakeLists.txt  Dockerfile  Makefile  build.sh  docker-compose.yml
CMake/: toolchain.cmake
Core/Inc/: libs.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
Docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
